--- a/department/css/home.css
+++ b/department/css/home.css
@@ -5,6 +5,7 @@
     margin-right: 1px;
 }
 
+
 body {
     background-color: #f0f2f5;
 }
@@ -50,12 +51,17 @@ body {
 
 .college-info h1 {
     font-size: 1.5em;
+    color: white; 
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .college-info h2 {
     font-size: 1.2em;
     font-weight: normal;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
 }
+
 
 .profile-menu {
     position: relative;
